# HinExSum

./: .gitignore  CITATION.cff  LICENSE  README.md  RELEASE.md  analysis_selection.md  analysis_selection.py  conftest.py  demo.py  environment_setup.md  pyproject.toml  requirements.txt  results_200.md  results_ablation.md  results_baselines.md  results_ilsum.md  results_tuned.md  rouge_validate.py  rouge_validation.md  run  run_ilsum.py
code/: evaluate_xlsum.py
code/data/: README.md  xlsum_hindi_sample.jsonl
code/hinexsum/: rouge.py  summarizer.py
code/hinexsum/data/: hindi_cue_phrases.txt  hindi_stopwords.txt
code/tests/: test_coherence.py  test_rouge.py
hinexsum/: __init__.py  embeddings.py  preprocessing.py  ranking.py
hinexsum/data/: hindi_connectives.txt
tests/: test_embeddings.py  test_preprocessing.py
