[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hinexsum"
version = "1.0.0"
description = "HinExSum: Hindi extractive summariser using distributional semantics (reference implementation of Mohd, Jan & Shah 2020, adapted to Hindi)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Dr. Mudasir Mohd" }]
keywords = ["summarization", "Hindi", "Devanagari", "word-embeddings", "ROUGE", "extractive", "low-resource"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Natural Language :: Hindi",
]
dependencies = ["gensim", "scikit-learn", "numpy"]

[project.optional-dependencies]
pos = ["stanza"]            # part-of-speech features (NVC / proper nouns)
eval = ["datasets"]         # download XL-Sum / ILSUM for the evaluation harness
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/mudasirmohd/HinExSum"

[tool.setuptools]
packages = ["hinexsum"]

[tool.setuptools.package-data]
hinexsum = ["data/*.txt"]
